# rust_first_steps

./: Cargo.toml  Readme.md  pairplot_sepal_length_petal_length.html  pairplot_sepal_length_petal_width.html  pairplot_sepal_length_sepal_width.html
data/: housing.csv
plots/: regression_area.html  relu_plot.html  target_vs_area.html  target_vs_distance_from_center.html
