[package]
name = "rust_first_steps"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-csv = "0.5.3"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
ndarray-rand = "0.15.0"
plotly = "0.12.1"
polars = "0.48.1"
rand = "0.9.1"
serde = "1.0.219"
